Main layout improvement + added some stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">WeatherApp2</string>
     <string name="City">City</string>
+    <string name="Temperature">Temperature</string>
+    <string name="Clouds">Clouds</string>
+    <string name="Moist">Moist</string>
+    <string name="Wind">Wind</string>
+    <string name="Pressure">Pressure</string>
 </resources>
