--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
     <string name="app_name">WeatherApp2</string>
     <string name="City">City</string>
+    <string name="Hour">Hour</string>
+    <string name="LastUpdated">LastUpdated</string>
     <string name="Temperature">Temperature</string>
     <string name="Clouds">Clouds</string>
     <string name="Moist">Moist</string>
     <string name="Wind">Wind</string>
     <string name="Pressure">Pressure</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
