--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">WeatherApp2</string>
-    <string name="City">City</string>
+    <string name="City">CITY</string>
     <string name="Hour">Hour</string>
     <string name="LastUpdated">LastUpdated</string>
     <string name="Temperature">Temperature</string>
