Dodany spinner ale cos sie wywala, pewnie problem z viewpagerem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="City">CITY</string>
     <string name="Hour">Hour</string>
     <string name="Settings">Settings</string>
-    <string name="Units">Units</string>
+    <string name="Units">Use imperial units</string>
+    <string name="Refresh">Automatic refresh time</string>
     <string name="Metric">Metric</string>
     <string name="Imperial">Imperial</string>
     <string name="LastUpdated">LastUpdated</string>
