--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="Pressure">Pressure</string>
     <string name="Value">[Value]</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="City_here">City here</string>
 </resources>
